# beer-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo-husky/hooks/: pre-commit
.github/workflows/: docker-image.yml  rust.yml
src/: commands.rs  config.rs  giphy.rs  globals.rs  main.rs  message.rs  schedule.rs
