[package]
name = "beer-bot"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
syslog = ["syslog-tracing"]

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
cron = "0.12.1"
directories = "5.0.1"
chrono-humanize = "0.2.3"
rand = "0.8.5"
serde = { version = "1.0.204" }
serde_with = "3.8.3"
slack-morphism = { version = "2.4.0", features = ["hyper"] }
tokio-cron-scheduler = { version = "0.10.2", features = ["signal"] }
syslog-tracing = { version = "0.3.1", optional = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.tokio]
version = "1.38.0"
features = [
    "bytes",
    "rt-multi-thread",
    "signal",
    "tracing",
    "macros",
    "fs"
]

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]
