[package]
name = "beer-bot"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
syslog = ["syslog-tracing"]
commands = []
default = ["commands", "giphy"]
giphy = ["reqwest"]

[dependencies]
anyhow = "1.0.86"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-humanize = "0.2.3"
config = "0.14.0"
cron = "0.12.1"
derive_more = { version = "1.0.0", features = ["debug"] }
directories = "5.0.1"
rand = "0.8.5"
reqwest = { version = "0.12.7", optional = true, default-features = false, features = ["http2", "json", "rustls-tls"] }
rustls = { version = "0.23.10", default-features = false, features = ["ring"] }
serde = { version = "1.0.204" }
serde_json = "1.0.127"
serde_with = "3.8.3"
slack-morphism = { version = "2.4.0", features = ["hyper"] }
syslog-tracing = { version = "0.3.1", optional = true }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
url-macro = "0.1.8"

[dependencies.tokio]
version = "1.38.0"
features = [
    "bytes",
    "rt-multi-thread",
    "signal",
    "tracing",
    "macros",
    "fs"
]

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]
